# opengles-workspace

./: CMakeLists.txt  README.md  main.cpp
include/: Texture.h  fps.hpp  game.hpp  helper.hpp  input.hpp  renderer.hpp  shader.hpp  texture.hpp
shaders/: shader.frag  shader.vert
src/: Texture.cpp  fps.cpp  game.cpp  glfw_application.cpp  helper.cpp  input.cpp  numbers.txt  renderer.cpp  shader.cpp  texture.cpp
